--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@
   </head>
   <body>
     <header>
-      <h1 class="header__title">Is Your Birth Day Lucky?</h1>
+      <h1 class="header__title">Is Your Birth Day Palindrome?</h1>
     </header>
     <main>
       <div class="container">
         <div class="input-control">
           <label for="birth-day">Select your Birth Day</label>
           <input type="date" name="birth-day" id="birth-day" />
+        </div>
+        <div class="input-control">
+          <button id="btn-check" class="btn btn-check">Check</button>
         </div>
         <p id="error-message" class="error-message"></p>
         <p class="success-message" id="success-message"></p>
